@@ -2,10 +2,13 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  17 Apr 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> cegma-2.5.ebuild:
+  sci-biology/cegma: re-added KEYWORDS because sci-biology/ncbi-tools++ is now
+  available; fixed installation of perl-related files; dropped hmmer from DEPEND
+
   10 Jan 2015; Justin Lecher <jlec@gentoo.org> cegma-2.5.ebuild:
   Fix license;drop keywords due to missing keyowrds of deps
 
   10 Jan 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> +cegma-2.5.ebuild,
   +metadata.xml:
   new package; install *.pm into PERL5LIB/cegma and pass that via env.d
-
